// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lazy.spec v1 yarn.lock 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


\\"@babel/code-frame@^7.0.0\\", \\"@babel/code-frame@^7.10.1\\":
  version \\"7.10.1"
`;

exports[`lazy.spec v2 meta-only.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4
"
`;

exports[`lazy.spec v2 yarn.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4

\\"libra"
`;

exports[`lazy.spec v3 meta-only.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 6
  cache"
`;

exports[`lazy.spec v3 v4-tsdx.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 7
  cache"
`;

exports[`lazy.spec v3 yarn.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 6
  cache"
`;

exports[`lazy.spec v3 yarn-version-7.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 7
  cache"
`;
